# cogman-guard

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README_TH.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py
docs/: BASELINE_BEHAVIORAL_ANALYSIS_SPEC.md  EIMAS_MAPPING.md
examples/: behavioral_analysis_example.py  eimas_full_example.py  embedding_quality_example.py  provider_demo.py
scripts/: release.sh
src/cogman_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/cogman_tools/: __init__.py  behavioral_analyzer.py  eimas_analyzer.py  embedding_analyzer.py  embedding_inspector.py  quick_cli.py  text_signal_physics.py
src/cogman_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cogman_tools/providers/: __init__.py  base.py  claude_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
tests/: __init__.py  quick_test.py  quick_test_behavioral.py  run_all_tests.py  scenario_simulation.py  test_behavioral_analyzer.py  test_eimas_analyzer.py
tests/outputs/reports/: behavioral_quick_test_report.txt
